--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="css/index.css">
     <title>Home</title>
 </head>
 <body>
@@ -19,7 +19,7 @@
       </button>
       <a class="navbar-brand" href="#" style="color: #000141;"><h4>MY SHOP</h4></a>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
+        <div class="navbar-nav ps-5">
           <a class="nav-link active" aria-current="page" href="#">หน้าหลัก</a>
           <a class="nav-link" href="#">ส่งซ่อม</a>
           <a class="nav-link" href="#">สถานะ</a>
@@ -67,6 +67,7 @@
     </div>
   </div>
 </div>
+<!-- ลืมรหัสผ่าน-->
 <div class="modal fade" id="forgotModal" tabindex="-1" aria-labelledby="forgotModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content" style="border-radius: 39px; background-color: #D4E8FF;">
@@ -89,6 +90,7 @@
     </div>
   </div>
 </div>
+<!-- ยืนยันรหัสใหม่-->
 <div class="modal fade" id="ResetModal" tabindex="-1" aria-labelledby="ResetModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content" style="border-radius: 39px; background-color: #D4E8FF;">
@@ -165,7 +167,7 @@
     </div>
   </div>
 
-  <div class="container d-flex" style="height: 500px;">
+  <div class="container d-flex mb-5" style="height: 500px;">
     <div class="row">
       <div class="col">
         <h1>ทำไมถึงต้องเลือกเรา</h1>
