--- a/home_user.html
+++ b/home_user.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="css/index.css">
     <title>Home - User</title>
 </head>
 <body>
@@ -19,7 +19,7 @@
       </button>
       <a class="navbar-brand" href="#" style="color: #000141;"><h4>MY SHOP</h4></a>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
+        <div class="navbar-nav ps-5">
           <a class="nav-link active" aria-current="page" href="#">หน้าหลัก</a>
           <a class="nav-link" href="#">ส่งซ่อม</a>
           <a class="nav-link" href="#">สถานะ</a>
@@ -35,6 +35,8 @@
       </div>
     </div>
   </nav>
+  <!-- end navbar-->
+  
   <div class="p-5 mb-4">
     <div class="container pt-5 mb-4">
       <div class="card card_header">
@@ -47,7 +49,6 @@
       </div>
     </div>
   </div>
-  <!-- end navbar-->
 
   <div class="container d-flex" style="height: 500px;">
     <div class="row">
