--- a/home.html
+++ b/home.html
@@ -138,7 +138,11 @@
             </div>
             <div class="input-group">
               <input type="password" class="input-field" id="password" required>
-              <label for="password">ชื่อ-นามสกุล</label>
+              <label for="password">ชื่อ</label>
+            </div>
+            <div class="input-group">
+              <input type="password" class="input-field" id="password" required>
+              <label for="password">นามสกุล</label>
             </div>
             <div class="input-group">
               <input type="password" class="input-field" id="password" required>
