--- a/no_insurance_user.html
+++ b/no_insurance_user.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
-    <link rel="stylesheet" href="css/edit.css">
-    <title>Edit - User</title>
+    <link rel="stylesheet" href="css/no_insurance.css">
+    <title>ไม่มีประกัน - User</title>
 </head>
 <body>
 
@@ -39,26 +39,43 @@
 
   <div class="background"></div>
   
-  <div class="px-5 pt-5 edit">
-    <h1 class="pt-5 text-center">แก้ไขข้อมูล</h1>
+  <div class="px-5 py-5 repair">
+    <h1 class="pt-5 text-center">การบริการส่งซ่อม MY SHOP</h1>
+    <p class="pt-4 text-center">แบบไม่มีประกันกับทางร้าน</p>
     <form action="">
         <div class="p-5 container">
-          <div class="mb-3 row">
-            <div class="col">
-                <label for="inputEmail4" class="form-label fw-bold">ชื่อ</label>
-              <input type="text" class="form-control input1" placeholder="ชื่อ">
+            <div class="mb-3 row">
+                <div class="col">
+                    <label for="inputEmail4">กรุณากรอกหมายเลขโทรศัพท์</label>
+                  <input type="text" class="form-control input1" placeholder="กรุณากรอกหมายเลขโทรศัพท์">
+                </div>
+                <div class="col">
+                    <label for="inputEmail4">เลขรุ่น</label>
+                  <input type="text" class="form-control input1" placeholder="เลขรุ่น">
+                </div>
             </div>
-            <div class="col">
-                <label for="inputEmail4" class="form-label fw-bold">นามสกุล</label>
-              <input type="text" class="form-control input1" placeholder="นามสกุล">
+            <div class="mb-3 row">
+                <div class="col">
+                    <label for="inputEmail4">ยี่ห้อ</label>
+                  <input type="text" class="form-control input1" placeholder="ยี่ห้อ">
+                </div>
+                <div class="col">
+                    <label for="inputEmail4">เลข Serial Number</label>
+                  <input type="text" class="form-control input1" placeholder="เลข Serial Number">
+                </div>
             </div>
-          </div>
-            <div class="col-md-4">
-                <label for="exampleFormControlInput1" class="form-label fw-bold">เบอร์โทรศัพท์</label>
-                <input type="text" class="form-control input1" id="exampleFormControlInput1" placeholder="เบอร์โทรศัพท์">
+            <div class="mb-3 row">
+                <div class="col-md-4">
+                    <label for="inputEmail4">รุ่น</label>
+                  <input type="text" class="form-control input1" placeholder="รุ่น">
+                </div>
             </div>
             <div class="mb-3">
-                <label for="exampleFormControlTextarea1" class="form-label fw-bold">ที่อยู่</label>
+                <label for="exampleFormControlInput1" class="form-label fw-bold">อัพโหลดรูปภาพ</label>
+                <input type="file" class="form-control" id="exampleFormControlInput1">
+            </div>
+            <div class="mb-3">
+                <label for="exampleFormControlTextarea1" class="form-label fw-bold">กรุณากรอกรายละเอียด</label>
                 <textarea class="form-control address" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
             <div class="text-center pt-4">
