--- a/submitted_user.html
+++ b/submitted_user.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
-    <link rel="stylesheet" href="css/edit.css">
-    <title>Edit - User</title>
+    <link rel="stylesheet" href="css/submitted.css">
+    <title>ส่งซ่อม_ส่งเรื่องแล้ว - User</title>
 </head>
 <body>
 
@@ -39,33 +39,9 @@
 
   <div class="background"></div>
   
-  <div class="px-5 pt-5 edit">
-    <h1 class="pt-5 text-center">แก้ไขข้อมูล</h1>
-    <form action="">
-        <div class="p-5 container">
-          <div class="mb-3 row">
-            <div class="col">
-                <label for="inputEmail4" class="form-label fw-bold">ชื่อ</label>
-              <input type="text" class="form-control input1" placeholder="ชื่อ">
-            </div>
-            <div class="col">
-                <label for="inputEmail4" class="form-label fw-bold">นามสกุล</label>
-              <input type="text" class="form-control input1" placeholder="นามสกุล">
-            </div>
-          </div>
-            <div class="col-md-4">
-                <label for="exampleFormControlInput1" class="form-label fw-bold">เบอร์โทรศัพท์</label>
-                <input type="text" class="form-control input1" id="exampleFormControlInput1" placeholder="เบอร์โทรศัพท์">
-            </div>
-            <div class="mb-3">
-                <label for="exampleFormControlTextarea1" class="form-label fw-bold">ที่อยู่</label>
-                <textarea class="form-control address" id="exampleFormControlTextarea1" rows="3"></textarea>
-            </div>
-            <div class="text-center pt-4">
-              <button type="button" class="btn btn_custom">ยืนยัน</button>
-            </div>
-        </div>
-    </form>
+  <div class="repair">
+    <h1 class="container2 text-center">ระบบได้ทำการส่งเรื่องแล้ว<br/>
+        รอการตอบกลับภายใน 1 วัน</h1>
   </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
