--- a/status_assess_user.html
+++ b/status_assess_user.html
@@ -41,8 +41,8 @@
   
   <div class="px-5 pt-5 repair">
     <h1 class="pt-5 text-center">รุ่น ............. </h1>
-    <h1 class="pt-5 text-center">เลข Serial Number</h1>
-    <div class="container pt-4 py-5" id="card-container">
+    <h1 class="pt-2 text-center">เลข Serial Number</h1>
+    <div class="container pt-5 py-5" id="card-container">
         <p>วันที่ 00/00/0000 00.00</p>
         <h4 class="fw-bold">รายละเอียดการซ่อม</h4>
         <h5>เนื่องจาก.......................................................................................</h5>
@@ -55,6 +55,7 @@
             <h5>หย่องล่างกีต้าร์ไฟฟ้าแบบเดียว PS-001 ZX</h5>
             <h5>ราคา 55.00 บาท </h5>
             <h5>จำนวน 2 ชิ้น</h5>
+          </div>
         </div>
         <div class="row justify-content-start pt-5">
           <div class="col-4">
@@ -65,6 +66,7 @@
             <h5>ราคา 100.00 บาท </h5>
             <h5>จำนวน 2 ชิ้น</h5>
             <h5 style="color: red;">รอของ 3 วัน</h5>
+          </div>
         </div>
         <h5>รวมราคาอะไหร่ 310 บาท</h5>
         <h5>ค่าแรงช่าง 200 บาท</h5>
@@ -73,6 +75,7 @@
           <button class="btn btn_custom me-md-2" type="button">ยืนยัน</button>
           <button class="btn btn_custom_no" type="button">ปฎิเสธ</button>
         </div>
+      </div>
   </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
